<resources>
    <string name="app_name">বিশ্বকাপ ১৮ </string>
    <string name="fixture">গ্রুপপর্ব</string>
    <string name="groups">গ্রুপ</string>
    <string name="match_result">ফলাফল</string>
    <string name="pointTable">পয়েন্ট টেবিল</string>
    <string name="knock">নকআউট পর্ব</string>
    <string-array name="date">
        <item>১৪ জুন</item>
        <item>১৫ জুন</item>
        <item>১৬ জুন</item>
        <item>১৭ জুন</item>
        <item>১৮ জুন</item>
        <item>১৯ জুন</item>
        <item>২০ জুন</item>
        <item>২১ জুন</item>
        <item>২২ জুন</item>
        <item>২৩ জুন</item>
        <item>২৪ জুন</item>
        <item>২৫ জুন</item>
        <item>২৬ জুন</item>
        <item>২৭ জুন</item>
        <item>২৮ জুন</item>

    </string-array>
    <string-array name="date_eng">
        <item>14 June</item>
        <item>15 June</item>
        <item>16 June</item>
        <item>17 June</item>
        <item>18 June</item>
        <item>19 June</item>
        <item>20 June</item>
        <item>21 June</item>
        <item>22 June</item>
        <item>23 June</item>
        <item>24 June</item>
        <item>25 June</item>
        <item>26 June</item>
        <item>27 June</item>
        <item>28 June</item>
    </string-array>
    <string-array name="knockout_dates">
        <item>৩০ জুন (২য় রাউন্ড)</item>
        <item>১ জুলাই</item>
        <item>২ জুলাই</item>
        <item>৩ জুলাই</item>

        <item>৬ জুলাই (কোয়ার্টার ফাইনাল)</item>
        <item>৭ জুলাই</item>

        <item>১০ জুলাই (সেমিফাইনাল)</item>
        <item>১১ জুলাই</item>

        <item>১৪ জুলাই (৩য় স্থান নির্ধারণী)</item>

        <item>১৫ জুলাই (ফাইনাল)</item>
    </string-array>
    <string-array name="knockout_dates_eng">
        <item>30 June (2nd Round)</item>
        <item>1 July</item>
        <item>2 July</item>
        <item>3 July</item>

        <item>6 July (Quarter Final)</item>
        <item>7 July</item>

        <item>10 July (Semi Final)</item>
        <item>11 July</item>

        <item>14 July (3rd Place)</item>

        <item>15 July (Final)</item>
    </string-array>
    <string-array name="knockout_match">
        <item>ম্যাচ নং - ৪৯</item>
        <item>ম্যাচ নং - ৫০</item>
        <item>ম্যাচ নং - ৫১</item>
        <item>ম্যাচ নং - ৫২</item>
        <item>ম্যাচ নং - ৫৩</item>
        <item>ম্যাচ নং - ৫৪</item>
        <item>ম্যাচ নং - ৫৫</item>
        <item>ম্যাচ নং - ৫৬</item>
        <item>ম্যাচ নং - ৫৭</item>
        <item>ম্যাচ নং - ৫৮</item>
        <item>ম্যাচ নং - ৫৯</item>
        <item>ম্যাচ নং - ৬০</item>
        <item>ম্যাচ নং - ৬১</item>
        <item>ম্যাচ নং - ৬২</item>
        <item>ম্যাচ নং - ৬৩</item>
        <item>ম্যাচ নং - ৬৪</item>
    </string-array>
    <string-array name="knockout_match_e">
        <item>Match 49</item>
        <item>Match 50</item>
        <item>Match 51</item>
        <item>Match 52</item>
        <item>Match 53</item>
        <item>Match 54</item>
        <item>Match 55</item>
        <item>Match 56</item>
        <item>Match 57</item>
        <item>Match 58</item>
        <item>Match 59</item>
        <item>Match 60</item>
        <item>Match 61</item>
        <item>Match 62</item>
        <item>Match 63</item>
        <item>Match 64</item>
    </string-array>
    <string name="luzhniki_Stadium">লুজনিকি স্টেডিয়াম (মস্কো)</string>
    <string name="saint_Petersburg_Stadium">সেন্ট পিটার্সবার্গ স্টেডিয়াম</string>
    <string name="fisht_Stadium">ফিশ্ত এরেনা (সচি)</string>
    <string name="ekaterinburg_Arena">ইয়েকাতেরিনবার্গ এরেনা</string>
    <string name="kazan_Arena">কাজান এরেনা</string>
    <string name="nizhny_Novgorod_Stadium">নোভগোরদ স্টেডিয়াম</string>
    <string name="rostov_Arena">রোস্তভ এরেনা</string>
    <string name="samara_Arena">সামারা এরেনা</string>
    <string name="mordovia_Arena">মোরডোভিয়া এরেনা (সারানস্ক)</string>
    <string name="volgograd_Stadium">ভলগোগ্রাদ স্টেডিয়াম</string>
    <string name="spartak_Stadium">স্পারতাক এরেনা (মস্কো)</string>
    <string name="kaliningrad_Stadium">কালিনিনগ্রাদ</string>
    <string name="luzhniki_Stadium_e">Luzhniki Stadium</string>
    <string name="saint_Petersburg_Stadium_e">Saint Petersburg Stadium</string>
    <string name="fisht_Stadium_e">Fisht Stadium</string>
    <string name="ekaterinburg_Arena_e">Ekaterinburg Arena</string>
    <string name="kazan_Arena_e">Kazan Arena</string>
    <string name="nizhny_Novgorod_Stadium_e">Novgorod Stadium</string>
    <string name="rostov_Arena_e">Rostov Arena</string>
    <string name="samara_Arena_e">Samara Arena</string>
    <string name="mordovia_Arena_e">Mordovia Arena</string>
    <string name="volgograd_Stadium_e">Volgograd Stadium</string>
    <string name="spartak_Stadium_e">Spartak Stadium</string>
    <string name="kaliningrad_Stadium_e">Kaliningrad Stadium</string>
    <string name="four">বিকেল ৪টা</string>
    <string name="six">সন্ধ্যা ৬টা</string>
    <string name="seven">সন্ধ্যা ৭টা</string>
    <string name="eight">রাত ৮টা</string>
    <string name="nine">রাত ৯টা</string>
    <string name="ten">রাত ১০টা</string>
    <string name="twelve">রাত ১২টা</string>
    <string name="one">রাত ১টা</string>
    <string name="four_e">4pm (GMT+6)</string>
    <string name="six_e">6pm (GMT+6)</string>
    <string name="seven_e">7pm (GMT+6)</string>
    <string name="eight_e">8pm (GMT+6)</string>
    <string name="nine_e">9pm (GMT+6)</string>
    <string name="ten_e">10pm (GMT+6)</string>
    <string name="twelve_e">12midnight (GMT+6)</string>
    <string name="one_e">1am (GMT+6)</string>
    <string name="russia">রাশিয়া</string>
    <string name="soudi_arab">সৌদি আরব</string>
    <string name="egypt">মিসর</string>
    <string name="Uruguay">উরুগুয়ে</string>
    <string name="Portugal">পর্তুগাল</string>
    <string name="Spain">স্পেন</string>
    <string name="Morocco">মরক্কো</string>
    <string name="Iran">ইরান</string>
    <string name="France">ফ্রান্স</string>
    <string name="Australia">অস্ট্রেলিয়া</string>
    <string name="Peru">পেরু</string>
    <string name="Denmark">ডেনমার্ক</string>
    <string name="Argentina">আর্জেন্টিনা</string>
    <string name="Iceland">আইসল্যান্ড</string>
    <string name="Croatia">ক্রোয়েশিয়া</string>
    <string name="Nigeria">নাইজেরিয়া</string>
    <string name="Brazil">ব্রাজিল</string>
    <string name="Switzerland">সুইজারল্যান্ড</string>
    <string name="Costa_Rica">কোস্টারিকা</string>
    <string name="Serbia">সার্বিয়া</string>
    <string name="Germany">জার্মানি</string>
    <string name="Mexico">মেক্সিকো</string>
    <string name="Sweden">সুইডেন</string>
    <string name="Korea_Republic">দঃ কোরিয়া</string>
    <string name="Belgium">বেলজিয়াম</string>
    <string name="Panama">পানামা</string>
    <string name="Tunisia">তিউনিসিয়া</string>
    <string name="England">ইংল্যান্ড</string>
    <string name="Poland">পোল্যান্ড</string>
    <string name="Senegal">সেনেগাল</string>
    <string name="Colombia">কলোম্বিয়া</string>
    <string name="Japan">জাপান</string>
    <string name="russia_e">Russia</string>
    <string name="soudi_arab_e">Soudi Arab</string>
    <string name="egypt_e">Egypt</string>
    <string name="Uruguay_e">Uruguay</string>
    <string name="Portugal_e">Portugal</string>
    <string name="Spain_e">Spain</string>
    <string name="Morocco_e">Morocco</string>
    <string name="Iran_e">Iran</string>
    <string name="France_e">France</string>
    <string name="Australia_e">Australia</string>
    <string name="Peru_e">Peru</string>
    <string name="Denmark_e">Denmark</string>
    <string name="Argentina_e">Argentina</string>
    <string name="Iceland_e">Iceland</string>
    <string name="Croatia_e">Croatia</string>
    <string name="Nigeria_e">Nigeria</string>
    <string name="Brazil_e">Brazil</string>
    <string name="Switzerland_e">Switzerland</string>
    <string name="Costa_Rica_e">Costa Rica</string>
    <string name="Serbia_e">Serbia</string>
    <string name="Germany_e">Germany</string>
    <string name="Mexico_e">Mexico</string>
    <string name="Sweden_e">Sweden</string>
    <string name="Korea_Republic_e">South Korea</string>
    <string name="Belgium_e">Belgium</string>
    <string name="Panama_e">Panama</string>
    <string name="Tunisia_e">Tunisia</string>
    <string name="England_e">England</string>
    <string name="Poland_e">Poland</string>
    <string name="Senegal_e">Senegal</string>
    <string name="Colombia_e">Colombia</string>
    <string name="Japan_e">Japan</string>
    <string name="a1">এ১</string>
    <string name="b1">বি১</string>
    <string name="c1">সি১</string>
    <string name="d1">ডি১</string>
    <string name="e1">ই১</string>
    <string name="f1">এফ১</string>
    <string name="g1">জি১</string>
    <string name="h1">এইচ১</string>
    <string name="a2">এ২</string>
    <string name="b2">বি২</string>
    <string name="c2">সি২</string>
    <string name="d2">ডি২</string>
    <string name="e2">ই২</string>
    <string name="f2">এফ২</string>
    <string name="g2">জি২</string>
    <string name="h2">এইচ২</string>
    <string name="win49">জয়ী ৪৯</string>
    <string name="win50">জয়ী ৫০</string>
    <string name="win51">জয়ী ৫১</string>
    <string name="win52">জয়ী ৫২</string>
    <string name="win53">জয়ী ৫৩</string>
    <string name="win54">জয়ী ৫৪</string>
    <string name="win55">জয়ী ৫৫</string>
    <string name="win56">জয়ী ৫৬</string>
    <string name="win57">জয়ী ৫৭</string>
    <string name="win58">জয়ী ৫৮</string>
    <string name="win59">জয়ী ৫৯</string>
    <string name="win60">জয়ী ৬০</string>
    <string name="win61">জয়ী ৬১</string>
    <string name="win62">জয়ী ৬২</string>
    <string name="lost61">পরাজিত ৬১</string>
    <string name="lost62">পরাজিত ৬২</string>
    <string-array name="match_num">
        <item>ম্যাচ নং - ১</item>
        <item>ম্যাচ নং - ২</item>
        <item>ম্যাচ নং - ৩</item>
        <item>ম্যাচ নং - ৪</item>
        <item>ম্যাচ নং - ৫</item>
        <item>ম্যাচ নং - ৬</item>
        <item>ম্যাচ নং - ৭</item>
        <item>ম্যাচ নং - ৮</item>
        <item>ম্যাচ নং - ৯</item>
        <item>ম্যাচ নং - ১০</item>
        <item>ম্যাচ নং - ১১</item>
        <item>ম্যাচ নং - ১২</item>
        <item>ম্যাচ নং - ১৩</item>
        <item>ম্যাচ নং - ১৪</item>
        <item>ম্যাচ নং - ১৫</item>
        <item>ম্যাচ নং - ১৬</item>
        <item>ম্যাচ নং - ১৭</item>
        <item>ম্যাচ নং - ১৮</item>
        <item>ম্যাচ নং - ১৯</item>
        <item>ম্যাচ নং - ২০</item>
        <item>ম্যাচ নং - ২১</item>
        <item>ম্যাচ নং - ২২</item>
        <item>ম্যাচ নং - ২৩</item>
        <item>ম্যাচ নং - ২৪</item>
        <item>ম্যাচ নং - ২৫</item>
        <item>ম্যাচ নং - ২৬</item>
        <item>ম্যাচ নং - ২৭</item>
        <item>ম্যাচ নং - ২৮</item>
        <item>ম্যাচ নং - ২৯</item>
        <item>ম্যাচ নং - ৩০</item>
        <item>ম্যাচ নং - ৩১</item>
        <item>ম্যাচ নং - ৩২</item>
        <item>ম্যাচ নং - ৩৩</item>
        <item>ম্যাচ নং - ৩৪</item>
        <item>ম্যাচ নং - ৩৫</item>
        <item>ম্যাচ নং - ৩৬</item>
        <item>ম্যাচ নং - ৩৭</item>
        <item>ম্যাচ নং - ৩৮</item>
        <item>ম্যাচ নং - ৩৯</item>
        <item>ম্যাচ নং - ৪০</item>
        <item>ম্যাচ নং - ৪১</item>
        <item>ম্যাচ নং - ৪২</item>
        <item>ম্যাচ নং - ৪৩</item>
        <item>ম্যাচ নং - ৪৪</item>
        <item>ম্যাচ নং - ৪৫</item>
        <item>ম্যাচ নং - ৪৬</item>
        <item>ম্যাচ নং - ৪৭</item>
        <item>ম্যাচ নং - ৪৮</item>
    </string-array>
</resources>