<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="invenz.example.bijohn.fifawc2018.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:id="@+id/idLinLay"
        >

        <TextView
            android:id="@+id/idFixture"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="22dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="#ffffff"
            android:text="@string/fixture"/>

        <TextView
            android:id="@+id/idKnockout"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/knock"/>

        <TextView
            android:id="@+id/idGroups"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/groups"/>

        <TextView
            android:id="@+id/idMatchResult"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/match_result"/>
        <TextView
            android:id="@+id/idPointTable"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/pointTable"/>



    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/idViewPager"
        android:layout_below="@+id/idLinLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

    </android.support.v4.view.ViewPager>
</RelativeLayout>